--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <script src="https://use.fontawesome.com/a2e1add17a.js"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 
 <body>
@@ -26,12 +28,12 @@
     <hr>
     <button id="fetchPositionButton" onclick="getPosition()">Click Me</button>
     <div id="weatherContent">
-        <p>Timezone - <span id="weatherTimeZone"></span></p>
-        <p>Current Time - <span id="currentTime"></span></p>
-        <p>Sunrise - <span id="sunriseTime"></span></p>
-        <p>Sunset - <span id="sunsetTime"></span></p>
-        <p>Cloud cover - <span id="cloud"></span></p>
-        <p>Wind speed - <span id="windSpeed"></span></p>
+        <p><span><i class='fas fa-map-marker-alt'></i></span>Timezone - <span id="weatherTimeZone"></span></p>
+        <p><span><i class="fa fa-clock-o" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
+        <p><span><i class="fa fa-sun"></i></span>Sunrise - <span id="sunriseTime"></span></p>
+        <p><span><i class="fa fa-moon"></i></span>Sunset - <span id="sunsetTime"></span></p>
+        <p><span><i class="fa fa-cloud"></i></span>Cloud cover - <span id="cloud"></span></p>
+        <p><span><i class="fa fa-water"></i></span>Wind speed - <span id="windSpeed"></span></p>
     </div>
     <div id="toast">
         <div id="desc">Please click on allow to know weather details..</div>
