updated toaster message and fixed width of it

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p><span><i class="fa fa-water"></i></span>Wind speed - <span id="windSpeed"></span></p>
     </div>
     <div id="toast">
-        <div id="desc">Please click on allow to know weather details..</div>
+        <div id="desc">Location access is blocked. Go to Settings > Site Settings > find my page and click on reset permissions</div>
     </div>
     <script src="js/index.js">
     </script>
