--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <p><span><i class="fa fa-clock-o" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
         <p><span><i class="fa fa-sun"></i></span>Sunrise - <span id="sunriseTime"></span></p>
         <p><span><i class="fa fa-moon"></i></span>Sunset - <span id="sunsetTime"></span></p>
+        <p><span><i class='fas fa-temperature-high'></i></span>Temperature - <span id="showTemperature"></span><span class="degreeCelsius">&#x2103;</span></p>
         <p><span><i class="fa fa-cloud"></i></span>Cloud cover - <span id="cloud"></span></p>
         <p><span><i class="fa fa-water"></i></span>Wind speed - <span id="windSpeed"></span></p>
     </div>
