--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <hr>
     <button id="fetchPositionButton" onclick="getPosition()">Click Me</button>
     <div id="weatherContent">
+        <h1>Weather Details - <span id="showDate" style="font-weight:bold"></span></h1>
+        <p>Weather Description - <span id="weatherDescription"></span><img src="" id="weatherDescriptionImage" alt="Weather Description Image" title="Weather Description Image"></p>
         <p><span><i class='fas fa-map-marker-alt'></i></span>Timezone - <span id="weatherTimeZone"></span></p>
         <p><span><i class="fa fa-clock-o" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
         <p><span><i class="fa fa-sun"></i></span>Sunrise - <span id="sunriseTime"></span></p>
