added color to icons and corrected logic of degree celsius calculation

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <div id="weatherContent">
         <h1>Weather Details - <span id="showDate" style="font-weight:bold"></span></h1>
         <p>Weather Description - <span id="weatherDescription"></span><img src="" id="weatherDescriptionImage" alt="Weather Description Image" title="Weather Description Image"></p>
-        <p><span><i class='fas fa-map-marker-alt'></i></span>Timezone - <span id="weatherTimeZone"></span></p>
-        <p><span><i class="fa fa-clock-o" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
-        <p><span><i class="fa fa-sun"></i></span>Sunrise - <span id="sunriseTime"></span></p>
-        <p><span><i class="fa fa-moon"></i></span>Sunset - <span id="sunsetTime"></span></p>
-        <p><span><i class='fas fa-temperature-high'></i></span>Temperature - <span id="showTemperature"></span><span class="degreeCelsius">&#x2103;</span></p>
-        <p><span><i class="fa fa-cloud"></i></span>Cloud cover - <span id="cloud"></span></p>
-        <p><span><i class="fa fa-water"></i></span>Wind speed - <span id="windSpeed"></span></p>
+        <p><span><i class='fas fa-map-marker-alt' style="color:#4d94ff"></i></span>Timezone - <span id="weatherTimeZone"></span></p>
+        <p><span><i class="fa fa-clock-o" style="color:#f05d5d" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
+        <p><span><i class="fa fa-sun" style="color:#FDB813"></i></span>Sunrise - <span id="sunriseTime"></span></p>
+        <p><span><i class="fa fa-moon" style="color:#25587C"></i></span>Sunset - <span id="sunsetTime"></span></p>
+        <p><span><i class='fas fa-temperature-high' style="color:red"></i></span>Temperature - <span id="showTemperature"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
+        <p><span><i class="fa fa-cloud" style="color:#6f7e91"></i></span>Cloud cover - <span id="cloud"></span></p>
+        <p><span><i class="fa fa-water" style="color:#82CAFA"></i></span>Wind speed - <span id="windSpeed"></span></p>
     </div>
     <div id="toast">
         <div id="desc">Location access is blocked. Go to Settings > Site Settings > find my page and click on reset permissions</div>
