--- a/index.html
+++ b/index.html
@@ -2,44 +2,92 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>My Own Project</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="https://use.fontawesome.com/a2e1add17a.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
 
 <body>
     <div id="loading">
-        <img id="loading-image" src="loading.gif" alt="Loading..." style="visibility: hidden;" />
+        <img id="loading-image" src="spinner.gif" alt="Loading..." style="visibility: hidden;" />
     </div>
-    <div class="header">
+
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <h1 class="pull-left">My Geolocation App</h1>
-            <a href="international.html" class="pull-right">Know about International Weather</a>
+            <div class="navbar-header">
+                <a class="navbar-brand" style="font-size:150%" href="#">My Geolocation App</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li style="font-size:118.9%"><a href="#">Know about International Weather</a></li>
+            </ul>
         </div>
-    </div>
-    <br><br>
+    </nav>
     <h4>Hi I'm Joy, working as Software Engineer at CDK Global.
         <br> I've built an app. It can fetch current weather details of the place you are living in.<br> Click the button below, weather details will appear and button will vanish.
     </h4>
     <hr>
-    <button id="fetchPositionButton" onclick="getPosition()">Click Me</button>
-    <div id="weatherContent">
-        <h1>Weather Details - <span id="showDate" style="font-weight:bold"></span></h1>
+    <button style="font-size:100%" id="fetchPositionButton" onclick="getPosition()">Click Me</button>
+    <div class="container-fluid" id="weatherContent">
+        <h1 style="font-size:140%">Weather Details - <span id="showDate" style="font-weight:bold"></span></h1>
         <p>Weather Description - <span id="weatherDescription"></span><img src="" id="weatherDescriptionImage" alt="Weather Description Image" title="Weather Description Image"></p>
-        <p><span><i class='fas fa-map-marker-alt' style="color:#4d94ff"></i></span>Timezone - <span id="weatherTimeZone"></span></p>
-        <p><span><i class="fa fa-clock-o" style="color:#f05d5d" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
-        <p><span><i class="fa fa-sun" style="color:#FDB813"></i></span>Sunrise - <span id="sunriseTime"></span></p>
-        <p><span><i class="fa fa-moon" style="color:#25587C"></i></span>Sunset - <span id="sunsetTime"></span></p>
-        <p><span><i class='fas fa-temperature-high' style="color:red"></i></span>Temperature - <span id="showTemperature"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
-        <p><span><i class="fa fa-cloud" style="color:#6f7e91"></i></span>Cloud cover - <span id="cloud"></span></p>
-        <p><span><i class="fa fa-water" style="color:#82CAFA"></i></span>Wind speed - <span id="windSpeed"></span></p>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class='fas fa-map-marker-alt' style="color:#4d94ff"></i></span>Timezone - <span id="weatherTimeZone"></span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class="fa fa-clock-o" style="color:#f05d5d" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class="fa fa-cloud" style="color:#6f7e91"></i></span>Cloud cover - <span id="cloud"></span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class="fa fa-sun" style="color:#FDB813"></i></span>Sunrise - <span id="sunriseTime"></span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class="fa fa-moon" style="color:#25587C"></i></span>Sunset - <span id="sunsetTime"></span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class="fa fa-paper-plane" style="color:#1E90FF"></i></span>Wind direction - <span id="windDirection"></span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class="fa fa-water" style="color:#82CAFA"></i></span>Wind speed - <span id="windSpeed"></span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class='fas fa-temperature-high' style="color:red"></i></span>Temperature - <span id="showTemperature"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span><i class="fas fa-temperature-low" style="color:red"></i></span>Feels like - <span id="feelsLike"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span class="glyphicon glyphicon-tint"></span>Humidity - <span id="showHumidity"></span></p>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <h1 id="weatherForecast" style="margin-left: 5.4%; font-size: 145%; visibility: hidden">Weather Forecasts</h1>
+                <div id="showChart" class="table-responsive" style="display: none; position: relative; height:50vh; width:95vw">
+                    <canvas id="myChart"></canvas>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="toast">
-        <div id="desc">Location access is blocked. Go to Settings > Site Settings > find my page and click on reset permissions</div>
+        <div id="desc"></div>
     </div>
     <script src="js/index.js">
     </script>
