changed wind icon and intro section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
     </nav>
-    <h4>Hi I'm Joy, working as Software Engineer at CDK Global.
+    <h4><strong>Hi I'm Joy, SDE @ Amazon with over 2+ years of experience</strong>
         <br> I've built an app. It can fetch current weather details of the place you are living in.<br> Click the button below, weather details will appear and button will vanish.
     </h4>
     <hr>
@@ -62,7 +62,7 @@
                 <p><span><i class="fa fa-paper-plane" style="color:#1E90FF"></i></span>Wind direction - <span id="windDirection"></span></p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span><i class="fa fa-water" style="color:#82CAFA"></i></span>Wind speed - <span id="windSpeed"></span></p>
+                <p><span><i class="fa fa-wind" style="color:#82CAFA"></i></span>Wind speed - <span id="windSpeed"></span></p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                 <p><span><i class='fas fa-temperature-high' style="color:red"></i></span>Temperature - <span id="showTemperature"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
