--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p><span class="marginRightTwoPercent"><i class="fa fa-clock-o" style="font-weight: bold; color:#f05d5d;" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span><i class="fa fa-cloud" style="color:#6f7e91;"></i></span>Cloud cover - <span id="cloud"></span></p>
+                <p><span class="marginRightTwoPercent"><i class="fa fa-cloud" style="color:#6f7e91;"></i></span>Cloud cover - <span id="cloud"></span></p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                 <p><span class="marginRightTwoPercent"><i class="fa fa-sun" style="color:#FDB813;"></i></span>Sunrise - <span id="sunriseTime"></span></p>
