--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div id="toast">
         <div id="desc"></div>
     </div>
-    <script src="js/index.js">
+    <script src="js/index.js" type="text/javascript">
     </script>
 </body>
 
