--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                 <p><span class="marginRightTwoPercent"><i class="fas fa-snowflake" style="color:blue;"></i></span>Dew Point - <span id="dewPoint"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
             </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p><span class="marginRightTwoPercent"><i class="far fa-eye"></i></span>Visibility - <span id="visibleDistance"></span></p>
+            </div>
         </div>
     </div>
     <hr>
