--- a/index.html
+++ b/index.html
@@ -89,9 +89,17 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                <h1 id="weatherForecast" style="margin-left: 5.4%; font-size: 145%; visibility: hidden">Weather Forecasts</h1>
-                <div id="showChart" class="table-responsive" style="display: none; position: relative; height:50vh; width:95vw">
-                    <canvas id="myChart"></canvas>
+                <h1 id="rainForecast" style="margin-left: 5.4%; font-size: 145%; visibility: hidden">Rain Forecasts for next 7 days</h1>
+                <div id="showRainChart" class="table-responsive" style="display: none; position: relative; height:50vh; width:95vw">
+                    <canvas id="myRainChart"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <h1 id="temperatureForecast" style="margin-left: 5.4%; font-size: 145%; visibility: hidden">Temperature Forecasts for next 7 days</h1>
+                <div id="showTemperatureChart" class="table-responsive" style="display: none; position: relative; height:50vh; width:95vw">
+                    <canvas id="myTemperatureChart"></canvas>
                 </div>
             </div>
         </div>
