added sunrise, sunset, moonrise & moonset timings

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     <hr>
-    <div class="container-fluid">
+    <div id="weatherForeCastData" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h1 id="rainForecast" style="margin-left: 5.4%; font-size: 145%; visibility: hidden">Rain Forecasts for next 7 days</h1>
