--- a/index.html
+++ b/index.html
@@ -1,123 +1,307 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Own Project</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/index.css">
+  <head>
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <title>My Weather App</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Source+Sans+Pro:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="css/index.css" />
     <script src="https://use.fontawesome.com/a2e1add17a.js"></script>
     <!-- <script src='https://kit.fontawesome.com/a076d05399.js'></script> -->
-    <script src="https://kit.fontawesome.com/cdfa67e7d9.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/cdfa67e7d9.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="loading">
-        <img id="loading-image" src="spinner.gif" alt="Loading..." style="visibility: hidden;" />
+      <img
+        id="loading-image"
+        src="spinner.gif"
+        alt="Loading..."
+        style="visibility: hidden"
+      />
     </div>
 
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" style="font-size:150%" href="#">My Weather App</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li style="font-size:118.9%"><a href="#">Know about International Weather</a></li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" style="font-size: 150%" href="#"
+          >My Weather App</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-size: 130%; color: #fff"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="font-size: 130%; color: #fff"
+                >About</a
+              >
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search weather for your city"
+              aria-label="Search"
+              style="width: 15em"
+            />
+            <button class="btn" style="background-color: #ffc220" type="submit">
+              Search
+            </button>
+          </form>
         </div>
+      </div>
     </nav>
-    <h4><strong>Hi I'm Joy, SDE @ Amazon <i class="fa fa-amazon"></i> with over 2+ years of experience</strong>
-        <br> I've built an app. It can fetch current weather details of the place you are living in.<br> Click the button below, weather details will appear and button will vanish.
+    <h4>
+      <strong
+        >Hi I'm Joy, Software Engineer III @ Walmart
+        <img class="walmart-icon" src="walmart-icon.png" alt="Walmart Icon" />
+        with around 4 years of work experience</strong
+      >
+      <br />
+      I've built an app. It can fetch current weather details of the place you
+      are living in.<br />
+      Click the button below, weather details will appear and button will
+      vanish.
     </h4>
-    <hr>
-    <button style="font-size:100%" id="fetchPositionButton" onclick="getPosition()">Click Me</button>
+    <hr />
+    <button
+      style="font-size: 100%"
+      id="fetchPositionButton"
+      onclick="getPosition()"
+    >
+      Click Me
+    </button>
     <div class="container-fluid" id="weatherContent">
-        <h1 style="font-size:140%">Weather Details - <span id="showDate" style="font-weight:bold"></span></h1>
-        <p>Weather Description - <span id="weatherDescription"></span><img src="" id="weatherDescriptionImage" alt="Weather Description Image" title="Weather Description Image"></p>
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class='fas fa-map-marker-alt' style="color:#4d94ff"></i></span>Timezone - <span id="weatherTimeZone"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="fa fa-clock-o" style="font-weight: bold; color:#f05d5d;" aria-hidden="true"></i></span> Current Time - <span id="currentTime"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="fa fa-cloud" style="color:#6f7e91;"></i></span>Cloud cover - <span id="cloud"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="fa fa-sun" style="color:#FDB813;"></i></span>Sunrise - <span id="sunriseTime"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="fa fa-moon" style="color:#25587C;"></i></span>Sunset - <span id="sunsetTime"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="fa fa-paper-plane" style="color:#1E90FF;"></i></span>Wind direction - <span id="windDirection"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="fa fa-wind" style="color:#82CAFA;"></i></span>Wind speed - <span id="windSpeed"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class='fas fa-temperature-high' style="color:red;"></i></span>Temperature - <span id="showTemperature"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="fas fa-temperature-low" style="color:red;"></i></span>Feels like - <span id="feelsLike"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="glyphicon glyphicon-signal marginRightTwoPercent"></span>Atmospheric pressure - <span id="atmosphericPressure"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="glyphicon glyphicon-tint marginRightTwoPercent"></span>Humidity - <span id="showHumidity"></span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="fas fa-snowflake" style="color:blue;"></i></span>Dew Point - <span id="dewPoint"></span>&nbsp;<span class="degreeCelsius">&#x2103;</span></p>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <p><span class="marginRightTwoPercent"><i class="far fa-eye"></i></span>Visibility - <span id="visibleDistance"></span></p>
-            </div>
+      <h1 style="font-size: 140%">
+        Weather Details - <span id="showDate" style="font-weight: bold"></span>
+      </h1>
+      <p>
+        Weather Description - <span id="weatherDescription"></span
+        ><img
+          src=""
+          id="weatherDescriptionImage"
+          alt="Weather Description Image"
+          title="Weather Description Image"
+        />
+      </p>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i
+                class="fas fa-map-marker-alt"
+                style="color: #4d94ff"
+              ></i></span
+            >Timezone - <span id="weatherTimeZone"></span>
+          </p>
         </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i
+                class="fa fa-clock-o"
+                style="font-weight: bold; color: #f05d5d"
+                aria-hidden="true"
+              ></i
+            ></span>
+            Current Time - <span id="currentTime"></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i class="fa fa-cloud" style="color: #6f7e91"></i></span
+            >Cloud cover - <span id="cloud"></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i class="fa fa-sun" style="color: #fdb813"></i></span
+            >Sunrise - <span id="sunriseTime"></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i class="fa fa-moon" style="color: #25587c"></i></span
+            >Sunset - <span id="sunsetTime"></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i class="fa fa-paper-plane" style="color: #1e90ff"></i></span
+            >Wind direction - <span id="windDirection"></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i class="fa fa-wind" style="color: #82cafa"></i></span
+            >Wind speed - <span id="windSpeed"></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i class="fas fa-temperature-high" style="color: red"></i></span
+            >Temperature - <span id="showTemperature"></span>&nbsp;<span
+              class="degreeCelsius"
+              >&#x2103;</span
+            >
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i class="fas fa-temperature-low" style="color: red"></i></span
+            >Feels like - <span id="feelsLike"></span>&nbsp;<span
+              class="degreeCelsius"
+              >&#x2103;</span
+            >
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <img
+              src="noun-barometer-78613.png"
+              alt="Atmospheric Pressure"
+              class="iconStyle"
+            />
+            Atmospheric pressure - <span id="atmosphericPressure"></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="glyphicon glyphicon-tint marginRightTwoPercent"></span
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="22"
+              height="22"
+              fill="currentColor"
+              class="bi bi-droplet-fill iconStyle"
+              viewBox="0 0 16 16"
+            >
+              <path d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6ZM6.646 4.646l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448c.82-1.641 1.717-2.753 2.093-3.13Z" />
+            </svg>Humidity - <span id="showHumidity"></span>
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"
+              ><i class="fas fa-snowflake" style="color: blue"></i></span
+            >Dew Point - <span id="dewPoint"></span>&nbsp;<span
+              class="degreeCelsius"
+              >&#x2103;</span
+            >
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <p>
+            <span class="marginRightTwoPercent"><i class="far fa-eye"></i></span
+            >Visibility - <span id="visibleDistance"></span>
+          </p>
+        </div>
+      </div>
     </div>
-    <hr>
+    <hr />
     <div id="weatherForeCastData" class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h1 id="rainForecast" style="margin-left: 5.4%; font-size: 145%; visibility: hidden">Rain Forecasts for next 7 days</h1>
-                <div id="showRainChart" class="table-responsive" style="display: none; position: relative; height:50vh; width:95vw">
-                    <canvas id="myRainChart"></canvas>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h1
+            id="rainForecast"
+            style="margin-left: 5.4%; font-size: 145%; visibility: hidden"
+          >
+            Rain Forecasts for next 7 days
+          </h1>
+          <div
+            id="showRainChart"
+            class="table-responsive"
+            style="display: none; position: relative; height: 50vh; width: 95vw"
+          >
+            <canvas id="myRainChart"></canvas>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h1 id="temperatureForecast" style="margin-left: 5.4%; font-size: 145%; visibility: hidden">Temperature Forecasts for next 7 days</h1>
-                <div id="showTemperatureChart" class="table-responsive" style="display: none; position: relative; height:50vh; width:95vw">
-                    <canvas id="myTemperatureChart"></canvas>
-                </div>
-            </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h1
+            id="temperatureForecast"
+            style="margin-left: 5.4%; font-size: 145%; visibility: hidden"
+          >
+            Temperature Forecasts for next 7 days
+          </h1>
+          <div
+            id="showTemperatureChart"
+            class="table-responsive"
+            style="display: none; position: relative; height: 50vh; width: 95vw"
+          >
+            <canvas id="myTemperatureChart"></canvas>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h1 id="sunMoonTimings" style="margin-left: 5.4%; font-size: 145%; visibility: hidden">Sunrise, Sunset, Moonrise, Moonset Timings for next 7 days</h1>
-                <table class="table-bordered table-striped" id="tableTimingsForSunAndMoon" style="margin-left: 5%;">
-                    <thead></thead>
-                    <tbody></tbody>
-                </table>
-            </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h1
+            id="sunMoonTimings"
+            style="margin-left: 5.4%; font-size: 145%; visibility: hidden"
+          >
+            Sunrise, Sunset, Moonrise, Moonset Timings for next 7 days
+          </h1>
+          <table
+            class="table-bordered table-striped"
+            id="tableTimingsForSunAndMoon"
+            style="margin-left: 5%"
+          >
+            <thead></thead>
+            <tbody></tbody>
+          </table>
         </div>
+      </div>
     </div>
     <div id="toast">
-        <div id="desc"></div>
+      <div id="desc"></div>
     </div>
-    <script src="js/index.js" type="text/javascript">
-    </script>
-</body>
-
+    <script src="js/index.js" type="text/javascript"></script>
+  </body>
 </html>
